--- a/myApp/templates/index.html
+++ b/myApp/templates/index.html
@@ -1,3 +1,14 @@
+{% extends "layouts/base.html" %}
 
-    <h1>first step to my website</h1>
-    
+{% block title %}Home Page{% endblock %}
+
+{% block content %}
+<section class="home" id="home">
+    <div class="content">
+        <h3>vintage</h3>
+        <h4>bouquet</h4>
+        <p>elevate your special occasion with the elegance of yesteryear</p>
+        <a href="#" class="btn">shop now!</a>
+    </div>
+</section>
+{% endblock %}
