--- a/myApp/templates/about.html
+++ b/myApp/templates/about.html
@@ -1,6 +1,29 @@
 {% extends "layouts/base.html" %}
 
 {% block title %}About Us{% endblock %}
+<!--<section class="about" id="about">
+    <h1 class="heading"> <span> about </span> us </h1>
 
+    <div class="content">
+        <h3>Rosa</h3>
+        <p>At Rosa, we believe in the timeless beauty and profound language of flowers. 
+        Nestled in the heart of Buraidah, our boutique floral studio is a haven for flower enthusiasts and connoisseurs alike.</p>
+
+        <h3>Our Story</h3>
+        <p>Established with a passion for crafting exquisite floral arrangements, Rosa Flowers Shop has been a cherished destination for those seeking the perfect floral expression since 2001. Founded by Ghadi, our journey began with a simple yet profound vision: to infuse every petal, stem, and bloom with artistry, elegance, and meaning.</p>
+     
+        <h3>Our Philosophy</h3>
+        <p>At Rosa, we understand that flowers have the remarkable ability to evoke emotions, convey sentiments, and illuminate moments. With this understanding at the core of our philosophy, we meticulously curate each arrangement, ensuring that it tells a unique story and resonates with its recipient.
+        </p>
+
+        <h3>Our Craftsmanship</h3>
+        <p>We are committed to excellence in every aspect of our service. Whether you're celebrating a joyous occasion, expressing sympathy, or simply brightening someone's day, we strive to exceed your expectations with impeccable quality, personalized attention, and prompt, reliable delivery.</p>
+      
+        <h3>Visit Us</h3>
+        <p>Step into our enchanting world of blooms and botanical wonders at Rosa Flowers Shop. We invite you to explore our collection, discover the magic of flowers, and find the perfect arrangement to express your sentiments, celebrate life's milestones, and create lasting memories.</p>
+    </div>
+</section>-->
+
+{% block content %}
 
 {% endblock %}
