--- a/myApp/templates/index.html
+++ b/myApp/templates/index.html
@@ -1,8 +1,45 @@
-{% extends "layouts/base.html" %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width">
+      <title>
+         Rosa 
+      </title>
+      <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@400;700&display=swap">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap">
+      <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
-{% block title %}Home Page{% endblock %}
 
-{% block content %}
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+   </head>
+   <body>
+    <header>
+     <a href="#" class="logo">Rosa</a>
+
+     <nav class="bar">
+        <a href="#home">home</a>
+        <a href="#products">products</a>
+        <a href="#about">about us</a>
+        <a href="#contact">contact</a>
+      </nav>
+
+      <div class="icons">
+        <a href="#">
+             <i class="ion-ios-search"></i>
+          </a>
+        <a href="#">
+             <i class="ion-ios-cart"></i>
+          </a>
+        <a href="#">
+             <i class="ion-ios-person"></i>
+          </a>
+         </div>
+   </header>
+
 <section class="home" id="home">
     <div class="content">
         <h3>vintage</h3>
@@ -10,5 +47,43 @@
         <p>elevate your special occasion with the elegance of yesteryear</p>
         <a href="#" class="btn">shop now!</a>
     </div>
+</section> 
+
+<section class="about" id="about">
+    <div class="container">
+        <h2 class="section-title">About Us</h2>
+        <div class="row">
+            <div class="col">
+                <div class="icon"><i class="ion-ios-rose"></i></div>
+                <h3>Rosa</h3>
+                <p>At Rosa, we believe in the timeless beauty and profound language of flowers. Nestled in the heart of Buraidah, our boutique floral studio is a haven for flower enthusiasts and connoisseurs alike.</p>
+            </div>
+            <div class="col">
+                <div class="icon"><i class="ion-ios-clock"></i></div>
+                <h3>Our Story</h3>
+                <p>Established with a passion for crafting exquisite floral arrangements, Rosa Flowers Shop has been a cherished destination for those seeking the perfect floral expression since 2001. Founded by <b>Ghadi</b>, our journey began with a simple yet profound vision: to infuse every petal, stem, and bloom with artistry, elegance, and meaning.</p>
+            </div>
+            <div class="col">
+                <div class="icon"><i class="ion-ios-lightbulb"></i></div>
+                <h3>Our Philosophy</h3>
+                <p>At Rosa, we understand that flowers have the remarkable ability to evoke emotions, convey sentiments, and illuminate moments. With this understanding at the core of our philosophy, we meticulously curate each arrangement, ensuring that it tells a unique story and resonates with its recipient.</p>
+            </div>
+            <div class="col">
+                <div class="icon"><i class="ion-ios-color-wand"></i></div>
+                <h3>Our Craftsmanship</h3>
+                <p>We are committed to excellence in every aspect of our service. Whether you're celebrating a joyous occasion, expressing sympathy, or simply brightening someone's day, we strive to exceed your expectations with impeccable quality, personalized attention, and prompt, reliable delivery.</p>
+            </div>
+            <div class="col">
+                <div class="icon"><i class="ion-ios-email"></i></div>
+                <h3>Visit Us</h3>
+                <p>Step into our enchanting world of blooms and botanical wonders at Rosa Flowers Shop. We invite you to explore our collection, discover the magic of flowers, and find the perfect arrangement to express your sentiments, celebrate life's milestones, and create lasting memories.</p>
+            </div>
+        </div>
+    </div>
 </section>
-{% endblock %}
+
+
+      
+   </body>
+ </html>
+   
