--- a/myApp/templates/layouts/base.html
+++ b/myApp/templates/layouts/base.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <title>
-         Rosa - {% block title %}{% endblock %}
+         Rosa - 
       </title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
