--- a/myApp/templates/layouts/base.html
+++ b/myApp/templates/layouts/base.html
@@ -5,23 +5,23 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
       <title>
-         Rosa - 
+         Rosa  
       </title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
       <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@400;700&display=swap">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap">
+      <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 
       <link rel="stylesheet" href="{% static 'css/style.css' %}">
    </head>
    <body>
-      {% include 'header.html' %}
+      {% include 'includes/header.html' %}
      
       {% block content %}
       {% endblock content %}
 
-      
+      {% include 'includes/footer.html' %}
    </body>
  </html>
    
