--- a/myApp/templates/pages/about.html
+++ b/myApp/templates/pages/about.html
@@ -1,54 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width">
-      <title>
-         Rosa 
-      </title>
-      <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@400;700&display=swap">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap">
-      <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+{% extends "layouts/base.html" %}
 
-
-      <link rel="stylesheet" href="{% static 'css/style.css' %}">
-   </head>
-   <body>
-    <header>
-     <a href="#" class="logo">Rosa</a>
-
-     <nav class="bar">
-        <a href="#home">home</a>
-        <a href="#products">products</a>
-        <a href="#about">about us</a>
-        <a href="#contact">contact</a>
-      </nav>
-
-      <div class="icons">
-        <a href="#">
-             <i class="ion-ios-search"></i>
-          </a>
-        <a href="#">
-             <i class="ion-ios-cart"></i>
-          </a>
-        <a href="#">
-             <i class="ion-ios-person"></i>
-          </a>
-         </div>
-   </header>
-
-<section class="home" id="home">
-    <div class="content">
-        <h3>vintage</h3>
-        <h4>bouquet</h4>
-        <p>elevate your special occasion with the elegance of yesteryear</p>
-        <a href="#" class="btn">shop now!</a>
-    </div>
-</section> 
-
+{% block content %}
 <section class="about" id="about">
     <div class="container">
         <h2 class="section-title">About Us</h2>
@@ -81,9 +33,7 @@
         </div>
     </div>
 </section>
+{% endblock content %}
+    
 
 
-      
-   </body>
- </html>
-   
