solve repo issue& starting product page

--- a/myApp/templates/includes/footer.html
+++ b/myApp/templates/includes/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <footer>
 <div class="box-container">
 <div class="box">
@@ -30,13 +31,13 @@
 <a href="#">+966566909688</a>
 <a href="#">Rosa1422@gmail.com</a>
 <a href="#">Buraydah, Saudi Arabia - 77777</a>
-<img scr="images/paymenys.png" alt="">
+<img src="{% static '/images/paymenys.png' %}" alt="">
+</div>
+<div class="credit">created by <span>Ghadi YN </span>| &copy; all rights reserved </div>
 </div>
 
 
- <div class="credit">created by <span>Ghadi YN</span> | all rights reserved</div>
-
-</div>
+ 
 
 
 </footer>
