--- a/myApp/templates/includes/header.html
+++ b/myApp/templates/includes/header.html
@@ -3,7 +3,7 @@
 
      <nav class="bar">
     <a href="{% url 'index' %}">home</a>
-    <a href="#products">products</a>
+    <a href="/product/">product</a>
     <a href="/about/">about us</a>
     <a href="#contact">contact</a>
 </nav>
