--- a/myApp/templates/pages/product.html
+++ b/myApp/templates/pages/product.html
@@ -1,13 +1,59 @@
 {% extends "layouts/base.html" %}
+{% load static %}
 
 {% block content %}
-     
-   <section class="product" id="product">
-    <div class="content">
-    
-    </div>
+<section class="product" id="product">
+    <section class="flower-products">
+        <div class="flower-product">
+            <img src="{% static 'images/1.jpg' %}" alt="Product 1">
+           <div class="icons">
+            <a href="#" class="ion-ios-cart">add to cart</a>
+                <a href="#" class="ion-ios-heart"></a>
+                <a href="#" class="ion-ios-share"></a>
+                </div>
+            <h2>Rose Bouquet</h2>
+            <p>A beautiful arrangement of red roses.</p>
+            <span>$25</span>
+        </div>
+
+        <div class="flower-product">
+            <img src="{% static 'images/2.jpg' %}" alt="Product 2">
+            <div class="icons">
+            <a href="#" class="ion-ios-cart">add to cart</a>
+                <a href="#" class="ion-ios-heart"></a>
+                <a href="#" class="ion-ios-share"></a>
+                </div>
+            <h2>Tulip Bouquet</h2>
+            <p>A vibrant collection of tulips in assorted colors.</p>
+            <span>$30</span>
+        </div>
+
+        <div class="flower-product">
+            <img src="{% static 'images/3.jpg' %}" alt="Product 3">
+            <div class="icons">
+            <a href="#" class="ion-ios-cart">add to cart</a>
+                <a href="#" class="ion-ios-heart"></a>
+                <a href="#" class="ion-ios-share"></a>
+                </div>
+            <h2>Lily Arrangement</h2>
+            <p>Elegant lily arrangement in a glass vase.</p>
+            <span>$40</span>
+        </div>
+
+        <div class="flower-product">
+            <img src="{% static 'images/4.jpg' %}" alt="Product 4">
+            <div class="icons">
+            <a href="#" class="ion-ios-cart">add to cart</a>
+                <a href="#" class="ion-ios-heart"></a>
+                <a href="#" class="ion-ios-share"></a>
+                </div>
+            <h2>Sunflower Bouquet</h2>
+            <p>Bright and cheerful sunflowers in a rustic bouquet.</p>
+            <span>$35</span>
+        </div>
+
+        
+
+    </section>
 </section> 
-
-{% endblock content %}  
-
-
+{% endblock content %}
