--- a/myApp/templates/pages/about.html
+++ b/myApp/templates/pages/about.html
@@ -1,11 +1,11 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
+<section class="about-title" id="aboutT">
+<h2 class="section-title">About Us</h2>
+</section>
 <section class="about" id="about">
     <div class="container">
-        <div class="aboutitle">
-        <h2 class="section-title">About Us</h2>
-        </div>
         <div class="row">
             <div class="col">
                 <div class="icon"><i class="ion-ios-rose"></i></div>
