--- a/myApp/templates/includes/footer.html
+++ b/myApp/templates/includes/footer.html
@@ -3,18 +3,16 @@
 <div class="box-container">
 <div class="box">
 <h3> quick links</h3>
-<a href="#">home</a>
-<a href="#">about us</a>
-<a href="#">product</a>
-<a href="#">review</a>
-<a href="#">contact</a>
+<a href="{% url 'index' %}">home</a>
+    <a href="/product/">product</a>
+    <a href="/about/">about us</a>
+    <a href="#contact">contact</a>
 </div>
 
 <div class="box">
 <h3> extra links</h3>
 <a href="#">my account</a>
 <a href="#">my orders</a>
-<a href="#">my favorites</a>
 </div>
 
 <div class="box">
