--- a/myApp/templates/pages/index.html
+++ b/myApp/templates/pages/index.html
@@ -7,7 +7,7 @@
         <h3>vintage</h3>
         <h4>bouquet</h4>
         <p>elevate your special occasion with the elegance of yesteryear</p>
-        <a href="#" class="btn">shop now!</a>
+        <a href="/product/" class="btn">shop now!</a>
 
     </div>
     
