--- a/myApp/templates/layouts/base.html
+++ b/myApp/templates/layouts/base.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap">
       <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
       <link rel="stylesheet" href="{% static 'css/style.css' %}">
    </head>
