--- a/myApp/templates/pages/registration.html
+++ b/myApp/templates/pages/registration.html
@@ -6,10 +6,16 @@
     <h2 class="join-title">Join Us</h2>
 
     <div class="reg">
-        <h2></h2>
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+                {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
         <p class="login-link">Loyal Customer   <i class="ion-ios-heart"></i> ?<a href="#">  log in</a>.</p>
